Add some log